--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img class="imagem1" src="./img/insta-foto-celular.png" alt="celular">
+            <img class="imagem1" src="./img/instagram-celular.png" alt="celular">
         </div>
         <div class="instagram-continue">
             <div class="group">
